--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,9 +24,9 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p><a href="#publications">Publications</a></p>
-        <p><a href="#working-papers">Working Papers</a></p>
-        <p><a href="https://www.newyorkfed.org/research/economists/dogra">NY Fed Website</a></p>
+        <p><a href="#publications">Publications</a><br>
+        <a href="#working-papers">Working Papers</a><br>
+        <a href="https://www.newyorkfed.org/research/economists/dogra">NY Fed Website</a></p>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
