--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,8 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p><a href="#publications">Publications</a><br>
-        <a href="#working-papers">Working Papers</a><br>
+        <p><a href="#working-papers">Working Papers</a><br>
+        <a href="#publications">Publications</a><br>
         <a href="https://www.newyorkfed.org/research/economists/dogra">NY Fed Website</a></p>
 
         {% if site.github.is_project_page %}
