--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,8 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p><a href="#working-papers">Working Papers</a><br>
+        <p><a href="https://keshavdogra.github.io/papers/cv_mar24.pdf">Curriculum Vitae</a>
+        <a href="#working-papers">Working Papers</a><br>
         <a href="#publications">Publications</a><br>
         <a href="https://www.newyorkfed.org/research/economists/dogra">NY Fed Website</a></p>
 
