--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,8 @@
         <p><a href="https://keshavdogra.github.io/papers/cv_mar24.pdf">Curriculum Vitae</a><br>
         <a href="#working-papers">Working Papers</a><br>
         <a href="#publications">Publications</a><br>
-        <a href="https://www.newyorkfed.org/research/economists/dogra">NY Fed Website</a></p>
+        <a href="https://www.newyorkfed.org/research/economists/dogra">NY Fed Website</a>
+        <a href="https://scholar.google.com/citations?user=F7zSNlYAAAAJ&hl=en">Google Scholar</a></p>
 
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
