--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -9,3 +9,11 @@ a:hover {
 html {
     font-size: 18px; // originally 16px
 }
+
+body {
+    font-size: 18px; // originally 16px
+}
+
+p {
+    font-size: 18px; // originally 16px
+}
