--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,3 +17,11 @@ body {
 p {
     font-size: 18px; // originally 16px
 }
+
+.wrapper {
+  width:960px; // originally 860px
+}
+
+section {
+  width:600px; // originally 500px
+}
