--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,8 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p>Economic Research Advisor,<br>
+        Federal Reserve Bank of New York</p>
 
         <p><a href="https://keshavdogra.github.io/papers/cv_mar24.pdf">Curriculum Vitae</a><br>
         <a href="#working-papers">Working Papers</a><br>
