--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,11 @@ p {
 }
 
 .wrapper {
-  width:1160px; // originally 860px
+  width:1210px; // originally 860px
+}
+
+header {
+  width:320px; // originally 270px
 }
 
 section {
