--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,7 +5,7 @@
 a:hover {
   font-weight: inherit; 
 }
-
+/* This creates larger text but the resulting site does not work well on mobile
 html {
     font-size: 18px; // originally 16px
 }
@@ -29,3 +29,4 @@ header {
 section {
   width:800px; // originally 500px
 }
+*/
