--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
         <p>Economic Research Advisor,<br>
         Federal Reserve Bank of New York</p>
 
-        <p><a href="https://keshavdogra.github.io/papers/cv_mar24.pdf">Curriculum Vitae</a><br>
+        <p><a href="https://keshavdogra.github.io/papers/cv_apr24.pdf">Curriculum Vitae</a><br>
         <a href="#working-papers">Working Papers</a><br>
         <a href="#publications">Publications</a><br>
         <a href="https://www.newyorkfed.org/research/economists/dogra">NY Fed website</a><br>
